--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -29,5 +29,7 @@
     <string name="um_novo_aluno_foi_salvo">Um novo Aluno foi salvo!</string>
     <string name="foi_editado">" foi editado"</string>
     <string name="o_aluno">"o Aluno "</string>
+    <string name="os_alunos_aprovados_foram">"Os alunos aprovados foram: "</string>
+    <string name="os_alunos_reprovados_foram">"Os alunos reprovados foram: "</string>
 
 </resources>
